--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,11 @@
 @import url(../vendor/normalize.css);
 
 @import url(../blocks/page/page.css);
+
+.header {
+    max-width: 1184px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
