--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,267 @@
 @import url(../vendor/normalize.css);
 
+@import url(../fonts/font.css);
+
 @import url(../blocks/page/page.css);
 
+.page {
+  background-color: #2a2c2f;
+  font-family: 'Inter', 'Helvetica', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  color: #fff;
+}
+
+.page__header {
+  margin: 28px auto 56px;
+}
+
+.page__lead {
+  margin: 0 auto 92px;
+}
+
+.page__intro {
+  margin: 0 auto 92px;
+}
+
+.page__photo-grid {
+  margin: 0 auto 92px;
+}
+
+.page__places {
+  margin: 0 auto 92px;
+}
+
+.page__cover {
+  margin: 0 auto 92px;
+}
+
 .header {
-    max-width: 1184px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+  max-width: 1184px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__img {
+  width: 176px;
+  height: 52px;
+}
+
+.header__lang-switch {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.header__lang-link {
+  margin-left: 18px;
+  font-size: 24px;
+  line-height: 1.2;
+  color: inherit;
+  text-decoration: none;
+}
+
+.header__lang-link_active {
+  border-bottom: 2px solid #fff;
+}
+
+.lead {
+  max-width: 984px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.lead__title {
+  max-width: 720px;
+  margin: 0 0 32px;
+  padding: 0;
+  font-size: 96px;
+  font-weight: 900;
+  line-height: 1.05;
+  text-align: center;
+}
+
+.lead__subtitle {
+  max-width: 640px;
+  margin: 0 0 64px;
+  padding: 0;
+  font-size: 30px;
+  line-height: 1.2;
+  text-align: center;
+}
+
+.lead__image-wrapper {
+  margin: 0;
+}
+
+.lead__img {
+  width: 984px;
+  height: 615px;
+  margin: 0 0 8px;
+  object-fit: cover;
+}
+
+.lead__caption {
+  font-size: 10px;
+  line-height: 1.4;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+.intro {
+  max-width: 984px;
+}
+
+.intro__wrapper {
+  max-width: 690px;
+}
+
+.intro__title {
+  margin: 0 0 40px;
+  padding: 0;
+  font-size: 54px;
+  font-weight: 900;
+  line-height: 1.07;
+}
+.intro__text {
+  margin: 0 0 33px;
+  padding: 0;
+  line-height: 1.6;
+}
+.intro__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.intro__list-item {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+.intro__span-accent {
+  font-weight: 400;
+}
+
+.photo-grid {
+  max-width: 1184px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+}
+.photo-grid__item {
+  width: 100%;
+}
+
+.places {
+  max-width: 984px;
+}
+
+.places__place {
+  margin-bottom: 80px;
+}
+
+.place {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 48px;
+  column-gap: 16px;
+}
+
+.place__title {
+  margin: 0;
+  padding: 0;
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 1.05;
+}
+.place__img {
+  width: 95%;
+  grid-row-start: 2;
+  object-fit: cover;
+}
+
+.place__website {
+  align-self: end;
+}
+
+.place__url-heading {
+  margin: 0 0 12px;
+  padding: 0;
+  font-size: 12px;
+  letter-spacing: 2px;
+  color: #aaa;
+}
+
+.place__link {
+  font-size: 18px;
+  line-height: 1.2;
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
+}
+
+.place__text {
+  margin: 0 0 26px;
+  padding: 0;
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.cover {
+  max-width: 1184px;
+}
+
+.cover__wrapper {
+  width: 100%;
+  padding-bottom: 62.5%;
+  position: relative;
+  background-image: linear-gradient(to top, rgba(42,44,47,0.3), rgba(42,44,47,0.3)),
+    url(../images/cover-trains.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.cover__title {
+  max-width: 560px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 1.05;
+  text-align: center;
+}
+
+.cover__subtitle {
+  max-width: 360px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 18px;
+  line-height: 1.2;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+}
+.footer {
+}
+.footer__menu {
+}
+.footer__links {
+}
+.footer__link {
+}
+.footer__copyright {
 }
