--- a/pages/index.css
+++ b/pages/index.css
@@ -38,7 +38,7 @@
 }
 
 .page__footer {
-    margin: 0 auto 24px;
+  margin: 0 auto 24px;
 }
 
 .header {
@@ -212,6 +212,11 @@
   color: inherit;
   text-decoration: none;
   border-bottom: 1px solid #fff;
+  transition: opacity .5s ease-in-out;
+}
+
+.place__link:hover {
+  opacity: .8;
 }
 
 .place__text {
@@ -223,28 +228,34 @@
 
 .cover {
   max-width: 1184px;
+  background-image: url(../images/cover-trains.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .cover__wrapper {
   width: 100%;
   padding-bottom: 62.5%;
   position: relative;
-  background-image: linear-gradient(to top, rgba(42,44,47,0.3), rgba(42,44,47,0.3)),
-    url(../images/cover-trains.jpg);
-  background-position: center;
-  background-size: cover;
+  background-color: rgba(42,44,47, 0.3);
+  transition: background-color .5s ease-in-out;
+}
+
+.cover__wrapper:hover {
+  background-color: rgba(42,44,47, 0.8);
 }
 
 .cover__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .cover__title {
@@ -267,40 +278,44 @@
 }
 
 .cover__link::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .footer {
-    max-width: 1184px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  max-width: 1184px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .footer__links {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    list-style: none;
-
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  list-style: none;
 }
 
 .footer__link {
-    margin-right: 18px;
-    line-height: 1.3;
-    color: inherit;
-    text-decoration: none;
+  margin-right: 18px;
+  line-height: 1.3;
+  color: inherit;
+  text-decoration: none;
+  transition: opacity .5s ease-in-out;
+}
+
+.footer__link:hover {
+  opacity: .8;
 }
 
 .footer__copyright {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
