--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css);
 
-@import url(../fonts/font.css);
+@import url(../vendor/fonts/font.css);
 
 @import url(../blocks/page/page.css);
 
@@ -11,6 +11,12 @@
   font-style: normal;
   font-weight: 400;
   color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
 
 .page__header {
@@ -212,11 +218,11 @@
   color: inherit;
   text-decoration: none;
   border-bottom: 1px solid #fff;
-  transition: opacity .5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .place__link:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .place__text {
@@ -238,12 +244,12 @@
   width: 100%;
   padding-bottom: 62.5%;
   position: relative;
-  background-color: rgba(42,44,47, 0.3);
-  transition: background-color .5s ease-in-out;
+  background-color: rgba(42, 44, 47, 0.3);
+  transition: background-color 0.5s ease-in-out;
 }
 
 .cover__wrapper:hover {
-  background-color: rgba(42,44,47, 0.8);
+  background-color: rgba(42, 44, 47, 0.8);
 }
 
 .cover__text {
@@ -308,11 +314,11 @@
   line-height: 1.3;
   color: inherit;
   text-decoration: none;
-  transition: opacity .5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .footer__link:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .footer__copyright {
