--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,8 @@
 
 @import url(../blocks/page/page.css);
 
+/* Common styles */
+
 .page {
   background-color: #2a2c2f;
   font-family: 'Inter', 'Helvetica', sans-serif;
@@ -23,41 +25,150 @@
   margin: 28px auto 56px;
 }
 
+@media screen and (max-width: 1200px) {
+  .page__header {
+    margin: 28px auto 48px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .page__header {
+    margin: 16px auto 48px;
+  }
+}
+
 .page__lead {
   margin: 0 auto 92px;
+}
+
+@media screen and (max-width: 800px) {
+  .page__lead {
+    margin: 0 auto 88px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .page__lead {
+    margin: 0 auto 64px;
+  }
 }
 
 .page__intro {
   margin: 0 auto 92px;
 }
 
+@media screen and (max-width: 800px) {
+  .page__intro {
+    margin: 0 auto 88px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .page__intro {
+    margin: 0 auto 64px;
+  }
+}
+
 .page__photo-grid {
   margin: 0 auto 92px;
 }
 
+@media screen and (max-width: 800px) {
+  .page__photo-grid {
+    margin: 0 auto 82px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .page__photo-grid {
+    margin: 0 auto 64px;
+  }
+}
+
 .page__places {
-  margin: 0 auto 92px;
+  margin: 0 auto 87px;
+}
+@media screen and (max-width: 1200px) {
+  .page__places {
+    margin: 0 auto 100px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .page__places {
+    margin: 0 auto 90px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .page__places {
+    margin: 0 auto 66px;
+  }
 }
 
 .page__cover {
   margin: 0 auto 92px;
+}
+@media screen and (max-width: 800px) {
+  .page__cover {
+    margin: 0 auto 88px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .page__cover {
+    margin: 0 auto 64px;
+  }
 }
 
 .page__footer {
   margin: 0 auto 24px;
 }
 
+@media screen and (max-width: 400px) {
+  .page__footer {
+    margin: 0 0 25px 16px;
+  }
+}
+
+/* Header's styles */
+
 .header {
   max-width: 1184px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
+}
+
+@media screen and (max-width: 1200px) {
+  .header {
+    max-width: 90%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header {
+    max-width: 94%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .header {
+    max-width: 90%;
+  }
 }
 
 .header__img {
   width: 176px;
   height: 52px;
+}
+
+@media screen and (max-width: 400px) {
+  .header__img {
+    width: 142px;
+    height: 42px;
+  }
 }
 
 .header__lang-switch {
@@ -78,9 +189,18 @@
   text-decoration: none;
 }
 
+@media screen and (max-width: 400px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.1;
+  }
+}
+
 .header__lang-link_active {
   border-bottom: 2px solid #fff;
 }
+
+/* Lead's styles */
 
 .lead {
   max-width: 984px;
@@ -88,6 +208,12 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .lead {
+    max-width: 928px;
+  }
 }
 
 .lead__title {
@@ -100,6 +226,15 @@
   text-align: center;
 }
 
+@media screen and (max-width: 700px) {
+  .lead__title {
+    max-width: 90%;
+    margin: 0 0 16px;
+    font-size: 40px;
+    line-height: 1.1;
+  }
+}
+
 .lead__subtitle {
   max-width: 640px;
   margin: 0 0 64px;
@@ -109,13 +244,27 @@
   text-align: center;
 }
 
+@media screen and (max-width: 1200px) {
+  .lead__subtitle {
+    margin: 0 0 56px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .lead__subtitle {
+    max-width: 90%;
+    margin: 0 0 40px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+}
+
 .lead__image-wrapper {
   margin: 0;
 }
 
 .lead__img {
-  width: 984px;
-  height: 615px;
+  width: 100%;
   margin: 0 0 8px;
   object-fit: cover;
 }
@@ -127,12 +276,50 @@
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 960px) {
+  .lead__caption {
+    margin: 0 0 0 24px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .lead__caption {
+    margin: 0 0 0 16px;
+  }
+}
+
+/* Intro's styles */
+
 .intro {
   max-width: 984px;
 }
 
+@media screen and (max-width: 1200px) {
+  .intro {
+    max-width: 91%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .intro {
+    max-width: 94%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .intro {
+    max-width: 90%;
+  }
+}
+
 .intro__wrapper {
   max-width: 690px;
+}
+
+@media screen and (max-width: 800px) {
+  .intro__wrapper {
+    max-width: 100%;
+  }
 }
 
 .intro__title {
@@ -142,11 +329,26 @@
   font-weight: 900;
   line-height: 1.07;
 }
+
+@media screen and (max-width: 400px) {
+  .intro__title {
+    padding: 0 40px 0 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.1;
+  }
+}
+
 .intro__text {
   margin: 0 0 33px;
   padding: 0;
-  line-height: 1.6;
+  line-height: 1.62;
 }
+
 .intro__list {
   margin: 0;
   padding: 0;
@@ -161,22 +363,87 @@
   font-weight: 400;
 }
 
+/* Photo-grid's styles */
+
 .photo-grid {
   max-width: 1184px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
 }
+
+@media screen and (max-width: 1200px) {
+  .photo-grid {
+    max-width: 90.6%;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .photo-grid {
+    max-width: 94%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .photo-grid {
+    max-width: 90%;
+    grid-template-columns: 100%;
+    gap: 12px;
+  }
+}
+
 .photo-grid__item {
   width: 100%;
 }
+
+/* Plases' styles */
 
 .places {
   max-width: 984px;
 }
 
+@media screen and (max-width: 1200px) {
+  .places {
+    max-width: 91%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .places {
+    max-width: 94%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .places {
+    max-width: 100%;
+  }
+}
+
 .places__place {
-  margin-bottom: 80px;
+  margin-bottom: 81px;
+}
+
+@media screen and (max-width: 1200px) {
+  .places__place {
+    margin-bottom: 83px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .places__place {
+    margin-bottom: 73px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .places__place {
+    margin-bottom: 50px;
+  }
 }
 
 .place {
@@ -187,6 +454,13 @@
   column-gap: 16px;
 }
 
+@media screen and (max-width: 760px) {
+  .place {
+    grid-template-columns: 100%;
+    row-gap: 32px;
+  }
+}
+
 .place__title {
   margin: 0;
   padding: 0;
@@ -194,14 +468,46 @@
   font-weight: 900;
   line-height: 1.05;
 }
+
+@media screen and (max-width: 800px) {
+  .place__title {
+    padding: 0 25px 0 0;
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .place__title {
+    width: 90%;
+    padding: 0;
+    margin: 0 auto;
+    font-size: 32px;
+  }
+}
+
 .place__img {
   width: 95%;
   grid-row-start: 2;
   object-fit: cover;
 }
 
+@media screen and (max-width: 760px) {
+  .place__img {
+    width: 100%;
+    grid-row-start: 3;
+  }
+}
+
 .place__website {
   align-self: end;
+}
+
+@media screen and (max-width: 400px) {
+  .place__website {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
 
 .place__url-heading {
@@ -229,8 +535,29 @@
   margin: 0 0 26px;
   padding: 0;
   font-size: 18px;
-  line-height: 1.6;
+  line-height: 1.62;
 }
+
+@media screen and (max-width: 800px) {
+  .place__text {
+    margin: 0 0 21px;
+    font-size: 16px;
+    line-height: 1.63;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .place__text {
+    width: 90%;
+    margin: 0 auto 25px;
+  }
+}
+
+.place__text:last-of-type {
+  margin: 0 auto;
+}
+
+/* Cover's styles */
 
 .cover {
   max-width: 1184px;
@@ -274,6 +601,15 @@
   text-align: center;
 }
 
+@media screen and (max-width: 550px) {
+  .cover__title {
+    max-width: 240px;
+    margin: 0 0 16px;
+    font-size: 32px;
+    line-height: 1.1;
+  }
+}
+
 .cover__link {
   max-width: 360px;
   font-size: 18px;
@@ -281,6 +617,14 @@
   text-align: center;
   color: inherit;
   text-decoration: none;
+}
+
+@media screen and (max-width: 550px) {
+  .cover__link {
+    max-width: 90%;
+    font-size: 14px;
+    line-height: 1.1;
+  }
 }
 
 .cover__link::before {
@@ -292,11 +636,33 @@
   height: 100%;
 }
 
+/* Footer's styles */
+
 .footer {
   max-width: 1184px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 48px;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer {
+    max-width: 91%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .footer {
+    max-width: 94%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .footer {
+    max-width: 90%;
+    flex-direction: column;
+  }
 }
 
 .footer__links {
@@ -305,16 +671,30 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
+  gap: 18px;
   list-style: none;
 }
 
+@media screen and (max-width: 400px) {
+  .footer__links {
+    flex-direction: column;
+    gap: 32px;
+  }
+}
+
 .footer__link {
-  margin-right: 18px;
   line-height: 1.3;
   color: inherit;
   text-decoration: none;
   transition: opacity 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 400px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+  }
 }
 
 .footer__link:hover {
@@ -324,4 +704,10 @@
 .footer__copyright {
   margin: 0;
   padding: 0;
+}
+
+@media screen and (max-width: 400px) {
+  .footer__copyright {
+    font-size: 14px;
+  }
 }
