add retina images and refactoring

--- a/pages/index.css
+++ b/pages/index.css
@@ -3,711 +3,56 @@
 @import url(../vendor/fonts/font.css);
 
 @import url(../blocks/page/page.css);
-
-/* Common styles */
-
-.page {
-  background-color: #2a2c2f;
-  font-family: 'Inter', 'Helvetica', sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  color: #fff;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  text-rendering: optimizeLegibility;
-}
-
-.page__header {
-  margin: 28px auto 56px;
-}
-
-@media screen and (max-width: 1200px) {
-  .page__header {
-    margin: 28px auto 48px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .page__header {
-    margin: 16px auto 48px;
-  }
-}
-
-.page__lead {
-  margin: 0 auto 92px;
-}
-
-@media screen and (max-width: 800px) {
-  .page__lead {
-    margin: 0 auto 88px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .page__lead {
-    margin: 0 auto 64px;
-  }
-}
-
-.page__intro {
-  margin: 0 auto 92px;
-}
-
-@media screen and (max-width: 800px) {
-  .page__intro {
-    margin: 0 auto 88px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .page__intro {
-    margin: 0 auto 64px;
-  }
-}
-
-.page__photo-grid {
-  margin: 0 auto 92px;
-}
-
-@media screen and (max-width: 800px) {
-  .page__photo-grid {
-    margin: 0 auto 82px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .page__photo-grid {
-    margin: 0 auto 64px;
-  }
-}
-
-.page__places {
-  margin: 0 auto 87px;
-}
-@media screen and (max-width: 1200px) {
-  .page__places {
-    margin: 0 auto 100px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .page__places {
-    margin: 0 auto 90px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .page__places {
-    margin: 0 auto 66px;
-  }
-}
-
-.page__cover {
-  margin: 0 auto 92px;
-}
-@media screen and (max-width: 800px) {
-  .page__cover {
-    margin: 0 auto 88px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .page__cover {
-    margin: 0 auto 64px;
-  }
-}
-
-.page__footer {
-  margin: 0 auto 24px;
-}
-
-@media screen and (max-width: 400px) {
-  .page__footer {
-    margin: 0 0 25px 16px;
-  }
-}
-
-/* Header's styles */
-
-.header {
-  max-width: 1184px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-@media screen and (max-width: 1200px) {
-  .header {
-    max-width: 90%;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .header {
-    max-width: 94%;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .header {
-    max-width: 90%;
-  }
-}
-
-.header__img {
-  width: 176px;
-  height: 52px;
-}
-
-@media screen and (max-width: 400px) {
-  .header__img {
-    width: 142px;
-    height: 42px;
-  }
-}
-
-.header__lang-switch {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.header__lang-link {
-  margin-left: 18px;
-  font-size: 24px;
-  line-height: 1.2;
-  color: inherit;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 400px) {
-  .header__lang-link {
-    font-size: 18px;
-    line-height: 1.1;
-  }
-}
-
-.header__lang-link_active {
-  border-bottom: 2px solid #fff;
-}
-
-/* Lead's styles */
-
-.lead {
-  max-width: 984px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-@media screen and (max-width: 1200px) {
-  .lead {
-    max-width: 928px;
-  }
-}
-
-.lead__title {
-  max-width: 720px;
-  margin: 0 0 32px;
-  padding: 0;
-  font-size: 96px;
-  font-weight: 900;
-  line-height: 1.05;
-  text-align: center;
-}
-
-@media screen and (max-width: 700px) {
-  .lead__title {
-    max-width: 90%;
-    margin: 0 0 16px;
-    font-size: 40px;
-    line-height: 1.1;
-  }
-}
-
-.lead__subtitle {
-  max-width: 640px;
-  margin: 0 0 64px;
-  padding: 0;
-  font-size: 30px;
-  line-height: 1.2;
-  text-align: center;
-}
-
-@media screen and (max-width: 1200px) {
-  .lead__subtitle {
-    margin: 0 0 56px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .lead__subtitle {
-    max-width: 90%;
-    margin: 0 0 40px;
-    font-size: 16px;
-    line-height: 1.25;
-  }
-}
-
-.lead__image-wrapper {
-  margin: 0;
-}
-
-.lead__img {
-  width: 100%;
-  margin: 0 0 8px;
-  object-fit: cover;
-}
-
-.lead__caption {
-  font-size: 10px;
-  line-height: 1.4;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-}
-
-@media screen and (max-width: 960px) {
-  .lead__caption {
-    margin: 0 0 0 24px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .lead__caption {
-    margin: 0 0 0 16px;
-  }
-}
-
-/* Intro's styles */
-
-.intro {
-  max-width: 984px;
-}
-
-@media screen and (max-width: 1200px) {
-  .intro {
-    max-width: 91%;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .intro {
-    max-width: 94%;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .intro {
-    max-width: 90%;
-  }
-}
-
-.intro__wrapper {
-  max-width: 690px;
-}
-
-@media screen and (max-width: 800px) {
-  .intro__wrapper {
-    max-width: 100%;
-  }
-}
-
-.intro__title {
-  margin: 0 0 40px;
-  padding: 0;
-  font-size: 54px;
-  font-weight: 900;
-  line-height: 1.07;
-}
-
-@media screen and (max-width: 400px) {
-  .intro__title {
-    padding: 0 40px 0 0;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .intro__title {
-    font-size: 32px;
-    line-height: 1.1;
-  }
-}
-
-.intro__text {
-  margin: 0 0 33px;
-  padding: 0;
-  line-height: 1.62;
-}
-
-.intro__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.intro__list-item {
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 1.5;
-}
-.intro__span-accent {
-  font-weight: 400;
-}
-
-/* Photo-grid's styles */
-
-.photo-grid {
-  max-width: 1184px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 16px;
-}
-
-@media screen and (max-width: 1200px) {
-  .photo-grid {
-    max-width: 90.6%;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 14px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .photo-grid {
-    max-width: 94%;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 16px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .photo-grid {
-    max-width: 90%;
-    grid-template-columns: 100%;
-    gap: 12px;
-  }
-}
-
-.photo-grid__item {
-  width: 100%;
-}
-
-/* Plases' styles */
-
-.places {
-  max-width: 984px;
-}
-
-@media screen and (max-width: 1200px) {
-  .places {
-    max-width: 91%;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .places {
-    max-width: 94%;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .places {
-    max-width: 100%;
-  }
-}
-
-.places__place {
-  margin-bottom: 81px;
-}
-
-@media screen and (max-width: 1200px) {
-  .places__place {
-    margin-bottom: 83px;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .places__place {
-    margin-bottom: 73px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .places__place {
-    margin-bottom: 50px;
-  }
-}
-
-.place {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 48px;
-  column-gap: 16px;
-}
-
-@media screen and (max-width: 760px) {
-  .place {
-    grid-template-columns: 100%;
-    row-gap: 32px;
-  }
-}
-
-.place__title {
-  margin: 0;
-  padding: 0;
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 1.05;
-}
-
-@media screen and (max-width: 800px) {
-  .place__title {
-    padding: 0 25px 0 0;
-    font-size: 42px;
-    line-height: 1.1;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .place__title {
-    width: 90%;
-    padding: 0;
-    margin: 0 auto;
-    font-size: 32px;
-  }
-}
-
-.place__img {
-  width: 95%;
-  grid-row-start: 2;
-  object-fit: cover;
-}
-
-@media screen and (max-width: 760px) {
-  .place__img {
-    width: 100%;
-    grid-row-start: 3;
-  }
-}
-
-.place__website {
-  align-self: end;
-}
-
-@media screen and (max-width: 400px) {
-  .place__website {
-    width: 90%;
-    margin: 0 auto;
-  }
-}
-
-.place__url-heading {
-  margin: 0 0 12px;
-  padding: 0;
-  font-size: 12px;
-  letter-spacing: 2px;
-  color: #aaa;
-}
-
-.place__link {
-  font-size: 18px;
-  line-height: 1.2;
-  color: inherit;
-  text-decoration: none;
-  border-bottom: 1px solid #fff;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.place__link:hover {
-  opacity: 0.8;
-}
-
-.place__text {
-  margin: 0 0 26px;
-  padding: 0;
-  font-size: 18px;
-  line-height: 1.62;
-}
-
-@media screen and (max-width: 800px) {
-  .place__text {
-    margin: 0 0 21px;
-    font-size: 16px;
-    line-height: 1.63;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .place__text {
-    width: 90%;
-    margin: 0 auto 25px;
-  }
-}
-
-.place__text:last-of-type {
-  margin: 0 auto;
-}
-
-/* Cover's styles */
-
-.cover {
-  max-width: 1184px;
-  background-image: url(../images/cover-trains.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.cover__wrapper {
-  width: 100%;
-  padding-bottom: 62.5%;
-  position: relative;
-  background-color: rgba(42, 44, 47, 0.3);
-  transition: background-color 0.5s ease-in-out;
-}
-
-.cover__wrapper:hover {
-  background-color: rgba(42, 44, 47, 0.8);
-}
-
-.cover__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.cover__title {
-  max-width: 560px;
-  margin: 0 0 32px;
-  padding: 0;
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 1.05;
-  text-align: center;
-}
-
-@media screen and (max-width: 550px) {
-  .cover__title {
-    max-width: 240px;
-    margin: 0 0 16px;
-    font-size: 32px;
-    line-height: 1.1;
-  }
-}
-
-.cover__link {
-  max-width: 360px;
-  font-size: 18px;
-  line-height: 1.2;
-  text-align: center;
-  color: inherit;
-  text-decoration: none;
-}
-
-@media screen and (max-width: 550px) {
-  .cover__link {
-    max-width: 90%;
-    font-size: 14px;
-    line-height: 1.1;
-  }
-}
-
-.cover__link::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-/* Footer's styles */
-
-.footer {
-  max-width: 1184px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 48px;
-}
-
-@media screen and (max-width: 1200px) {
-  .footer {
-    max-width: 91%;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .footer {
-    max-width: 94%;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .footer {
-    max-width: 90%;
-    flex-direction: column;
-  }
-}
-
-.footer__links {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 18px;
-  list-style: none;
-}
-
-@media screen and (max-width: 400px) {
-  .footer__links {
-    flex-direction: column;
-    gap: 32px;
-  }
-}
-
-.footer__link {
-  line-height: 1.3;
-  color: inherit;
-  text-decoration: none;
-  transition: opacity 0.5s ease-in-out;
-}
-
-@media screen and (max-width: 400px) {
-  .footer__link {
-    font-size: 24px;
-    line-height: 1;
-  }
-}
-
-.footer__link:hover {
-  opacity: 0.8;
-}
-
-.footer__copyright {
-  margin: 0;
-  padding: 0;
-}
-
-@media screen and (max-width: 400px) {
-  .footer__copyright {
-    font-size: 14px;
-  }
-}
+@import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/page/__lead/page__lead.css);
+@import url(../blocks/page/__intro/page__intro.css);
+@import url(../blocks/page/__photo-grid/page__photo-grid.css);
+@import url(../blocks/page/__places/page__places.css);
+@import url(../blocks/page/__cover/page__cover.css);
+@import url(../blocks/page/__footer/page__footer.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__img/header__img.css);
+@import url(../blocks/header/__lang-switch/header__lang-switch.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image-wrapper/lead__image-wrapper.css);
+@import url(../blocks/lead/__img/lead__img.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__wrapper/intro__wrapper.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
+
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__place/places__place.css);
+
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__img/place__img.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__text/place__text.css);
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__wrapper/cover__wrapper.css);
+@import url(../blocks/cover/__text/cover__text.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__link/cover__link.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/);
