--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,16 @@
+/* Common styles */
+
 .page {
-    background-color: #2A2C2F;
-}
+    background-color: #2a2c2f;
+    font-family: 'Inter', 'Helvetica', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
+  }
