--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,25 +1,43 @@
 .cover__link {
-    max-width: 360px;
-    font-size: 18px;
-    line-height: 1.2;
-    text-align: center;
-    color: inherit;
-    text-decoration: none;
+  min-height: 740px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: inherit;
+  text-decoration: none;
+  box-shadow: inset 0 0 0 50vw rgba(42, 44, 47, 0.3);
+  transition: box-shadow 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 1200px) {
+  .cover__link {
+    min-height: 640px;
   }
-  
-  @media screen and (max-width: 550px) {
-    .cover__link {
-      max-width: 90%;
-      font-size: 14px;
-      line-height: 1.1;
-    }
+}
+
+@media screen and (max-width: 800px) {
+  .cover__link {
+    min-height: 480px;
   }
-  
-  .cover__link::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+}
+
+@media screen and (max-width: 400px) {
+  .cover__link {
+    min-height: 200px;
   }
+}
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .cover__link {
+    background-image: url(../../../images/cover-trains@2x.png);
+  }
+}
+
+.cover__link:hover {
+  box-shadow: inset 0 0 0 50vw rgba(42, 44, 47, 0.8);
+}
