--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,14 +1,19 @@
 .header__lang-link {
-    margin-left: 18px;
-    font-size: 24px;
-    line-height: 1.2;
-    color: inherit;
-    text-decoration: none;
+  margin-left: 18px;
+  font-size: 24px;
+  line-height: 1.2;
+  color: inherit;
+  text-decoration: none;
+  transition: opacity 0.5s ease-in-out;
+}
+
+@media screen and (max-width: 400px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.1;
   }
-  
-  @media screen and (max-width: 400px) {
-    .header__lang-link {
-      font-size: 18px;
-      line-height: 1.1;
-    }
-  }
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
+}
