--- a/blocks/intro/__wrapper/intro__wrapper.css
+++ b/blocks/intro/__wrapper/intro__wrapper.css
@@ -4,6 +4,12 @@
   
   @media screen and (max-width: 800px) {
     .intro__wrapper {
-      max-width: 100%;
+      max-width: 94%;
+    }
+  }
+
+  @media screen and (max-width: 400px) {
+    .intro__wrapper {
+      max-width: 90%;
     }
   }
