--- a/blocks/page/__intro/page__intro.css
+++ b/blocks/page/__intro/page__intro.css
@@ -1,7 +1,14 @@
 .page__intro {
     margin: 0 auto 92px;
+    margin-left: 11.5%;
   }
   
+  @media screen and (max-width: 1200px) {
+    .page__intro {
+      margin: 0 48px 92px;
+    }
+  }
+
   @media screen and (max-width: 800px) {
     .page__intro {
       margin: 0 auto 88px;
