--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,16 +1,17 @@
 /* Common styles */
 
 .page {
-    background-color: #2a2c2f;
-    font-family: 'Inter', 'Helvetica', sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    color: #fff;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    text-rendering: optimizeLegibility;
-  }
+  min-width: 320px;
+  background-color: #2a2c2f;
+  font-family: 'Inter', 'Helvetica', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+}
