--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,20 +1,21 @@
 .intro__title {
-    margin: 0 0 40px;
-    padding: 0;
-    font-size: 54px;
-    font-weight: 900;
-    line-height: 1.07;
+  max-width: 690px;
+  margin: 0 0 40px;
+  padding: 0;
+  font-size: 54px;
+  font-weight: 900;
+  line-height: 1.07;
+}
+
+@media screen and (max-width: 400px) {
+  .intro__title {
+    padding: 0 40px 0 0;
   }
-  
-  @media screen and (max-width: 400px) {
-    .intro__title {
-      padding: 0 40px 0 0;
-    }
+}
+
+@media screen and (max-width: 700px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.1;
   }
-  
-  @media screen and (max-width: 700px) {
-    .intro__title {
-      font-size: 32px;
-      line-height: 1.1;
-    }
-  }
+}
